<resources>
    <string name="app_name">TiketSaya</string>
    <string name="slogan">Wisata Menjadi Lebih Asyik!</string>
    <string name="getstarted_title">Discover \nThe Beauty \nOf Earth</string>
    <string name="sign_in">Sign In</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="email_address_label">Email Address</string>
    <string name="nama_label">Name</string>
    <string name="bio_label">Bio</string>
</resources>
